<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:backgroundTintMode="multiply"
    android:background="@color/yellow"
    >


    <TableLayout
        android:id="@+id/tableLayout"
        android:background="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.96">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button

                android:id="@+id/cBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:backgroundTintMode="src_over"
                android:gravity="center"
                android:text="@string/c"
                android:textAlignment="center"
                android:textColor="@color/white"

                />

            <Button
                android:id="@+id/parBtn"

                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/parentheses"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/exponentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/exponent"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/divBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/divide"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>


        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_7"

                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/_8"
                android:background="@color/blue"



                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_9"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/multBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/mult"

                android:textAlignment="center"
                android:textColor="@color/white" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_6"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/subtractBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/subtract"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/plusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/negativeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/negative"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/zeroBtn"

                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/decBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/decimal"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/equalsBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue"
                android:gravity="center"
                android:text="@string/equal"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_a_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor"
        android:inputType="number"/>

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@color/blue"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/backspace" />

</androidx.constraintlayout.widget.ConstraintLayout>